--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -18,12 +18,13 @@
     justify-content: flex-start;
 
     img {
-        width: 90px;
-        height: 20px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;;
 
         @media screen and (min-width: 2000px) {
-            width: 180px;
-            height: 40px;
+            width: 100px;
+            height: 100px;
         }
     }
 }
