--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -151,6 +151,21 @@
            margin: 1rem;
        }
     }
+
+    @media screen and (max-width:500px) {
+        div:nth-child(1){
+            width: 50px;
+            height: 50px;
+        }
+        div:nth-child(2){
+            width: 70px;
+            height: 70px;
+        }
+        div:nth-child(3){
+            width: 50px;
+            height: 50px;
+        }
+     }
 }
 
 .app__header-img{
