--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -6,13 +6,14 @@
 
 .app__skills-container {
     display: flex;
-    width: 80%;
+    width: 90%;
     margin-top: 3rem;
     flex-direction: row;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 1050px) {
         width: 100%;
         flex-direction: column;
+       
     }
 }
 
@@ -38,8 +39,8 @@
     transition: all 0.3s ease-in-out;
 
     div{
-        width: 90px;
-        height: 90px;
+        width: 80px;
+        height: 80px;
         background-color: #fef4f5;
         border-radius: 50%;
 
@@ -84,8 +85,9 @@
     justify-content: flex-start;
     flex-direction: column;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 1050px) {
         margin-top: 2rem;
+        margin: 2rem 0 0 2rem;
     }
 }
 
@@ -135,19 +137,19 @@
 }
 
 .skills-tooltip{
-    max-width: 300px !important;
+    max-width: 500px !important;
     background-color: var(--white-color) !important;
     box-shadow: 0 0 25px rgba(0, 0,0,0.1) !important;
     border-radius: 5px !important;
     padding: 1rem !important;
     color: var(--gray-color) !important;
-    text-align: center !important;
+    text-align: start !important;
     line-height: 1.5 !important;
     opacity: 1 !important;
 
     @media screen and (min-width: 2000px) {
         font-size: 1.75re !important;
-        max-width: 500px !important;
+        max-width: 600px !important;
         line-height: 2 !important;
     }
 }
